# lilypond-android

./: README.md
cmake/: dependencies.cmake  lilypond.cmake
flower/: interval.hh  warn.cc
lily/: accidental-engraver.cc  accidental-placement.cc  accidental.cc  align-interface.cc  all-font-metrics.cc  apply-context-iterator.cc  arpeggio.cc  articulations.cc  audio-item.cc  auto-beam-engraver.cc  axis-group-engraver.cc  axis-group-interface.cc  bar-check-iterator.cc  bar-engraver.cc  beam-engraver.cc  beam-performer.cc  beam-quanting.cc  beam.cc  bezier.cc  book.cc  break-alignment-interface.cc  breathing-sign.cc  change-iterator.cc  chord-name-engraver.cc  chord-tremolo-engraver.cc  clef-engraver.cc  clef.cc  cluster.cc  coherent-ligature-engraver.cc  completion-note-heads-engraver.cc  completion-rest-engraver.cc  concurrent-hairpin-engraver.cc  constrained-breaking.cc  context-def.cc  context-property.cc  context-specced-music-iterator.cc  context.cc  control-track-performer.cc  cue-clef-engraver.cc  custos-engraver.cc  (+231 more)
lily/include/: accidental-interface.hh  align-interface.hh  all-font-metrics.hh  audio-column.hh  audio-element-info.hh  audio-element.hh  audio-staff.hh  axis-group-interface.hh  beam-scoring-problem.hh  beam.hh  beaming-pattern.hh  bezier.hh  book.hh  box.hh  bracket.hh  column-x-positions.hh  constrained-breaking.hh  context-def.hh  context-mod.hh  context.hh  dimensions.hh  directional-element-interface.hh  dot-configuration.hh  dot-formatting-problem.hh  file-name-map.hh  file-path.cc  fingering-column.hh  font-metric.hh  freetype.hh  global-context.hh  gregorian-ligature.hh  grob-array.hh  grob-info.hh  grob.hh  includable-lexer.hh  interval-minefield.hh  least-squares.hh  lily-guile-macros.hh  lily-guile.hh  lily-proto.hh  (+50 more)
node-addon/: .gitignore  CMakeLists.txt  binding.cc
node-addon/android/: CMakeLists.txt  deploy-prebuilts.sh  makeSDK.sh
node-addon/android/app/: .gitignore  settings.gradle
node-addon/android/app/app/: CMakeLists.txt  build.gradle
node-addon/android/app/app/src/androidTest/java/com/gnu/lilypond/: ExampleInstrumentedTest.kt
node-addon/android/app/app/src/main/: AndroidManifest.xml
node-addon/android/app/app/src/main/assets/lilypond-server/: .gitignore  home.html  main.js  package.json
node-addon/android/app/app/src/main/cpp/: native-lib.cpp
node-addon/android/app/app/src/main/java/com/gnu/lilypond/: MainActivity.java  NodeService.java
node-addon/android/app/app/src/main/res/layout/: activity_main.xml
node-addon/android/app/demo/: .gitignore  CMakeLists.txt  build.gradle  local.properties
node-addon/android/app/demo/src/main/: AndroidManifest.xml
node-addon/android/app/demo/src/main/assets/lilypond-server/: home.html  main.js
node-addon/android/app/demo/src/main/cpp/: native-lib.cpp
node-addon/android/app/demo/src/main/java/com/gnu/lilypond/: MainActivity.java  NodeService.java
node-addon/android/app/demo/src/main/java/com/gnu/lilyponddemo/: MainActivity.java  NodeService.java
node-addon/android/app/demo/src/main/res/layout/: activity_main.xml
node-addon/android/app/demo/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
node-addon/android/app/demo/src/main/res/values/: strings.xml
node-addon/android/app/gradle/wrapper/: gradle-wrapper.properties
node-addon/android/app/lilypond/: build.gradle
node-addon/android/app/lilypond/src/androidTest/java/com/gnu/lilypond/: ExampleInstrumentedTest.kt
node-addon/android/app/lilypond/src/main/: AndroidManifest.xml
node-addon/android/app/lilypond/src/test/java/com/gnu/lilypond/: ExampleUnitTest.kt
node-addon/android/lily/: parser.hh  version.hh
node-addon/include/: apis.hh  async-engraver.hh  async-progress-worker.hh  async-solver.hh  buffer.hh  persist.hh
node-addon/lily/: apis.cc
node-addon/source/: apis.cc  async-engraver.cc  binding.cc
node-addon/tests/: engrave-file.js  error.js  include-folders.js  init-scm.js  midi-test.js  multiple-engraver.js  profiler.js  simple.js
node-addon/tests/assets/: include-test.ly  little-star.ly  midi-test.ly  simple.ly
node-addon/tests/assets/inc/: dots.ly
scm/: framework-svg.scm  lily.scm
